--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="channel_chat_content_desc_profile">Immagine Profilo</string>
     <string name="upload_file_text">ha caricato un file</string>
 
+    <string name="participant_list">Participanti</string>
+
+
 
 
 
