--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,18 @@
     <string name="participant_menu">Vedi participanti</string>
     <string name="add_event">Crea evento</string>
 
+    <string name="add_event_title">Crea Evento</string>
+    <string name="add_event_name">Nome Evento</string>
+    <string name="add_event_location">Luogo</string>
+    <string name="add_event_date">Giorno</string>
+    <string name="add_event_time">Ora</string>
+    <string name="create_event">Crea Evento</string>
+
+
+
     <string name="no_channel_find">Nessun gruppo con questo nome, creane uno</string>
     <string name="create_channel">Crea Gruppo</string>
+    <string name="create_channel_name">Nome gruppo</string>
     <string name="loading">Caricamento</string>
 
 
