--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,17 +43,14 @@
     <string name="add_event_date">Giorno</string>
     <string name="add_event_time">Ora</string>
     <string name="create_event">Crea Evento</string>
-
-
+    <string name="created_event_text">ha creato un evento</string>
+    <string name="view_partecipants">Vedi Partecipanti </string>
+    <string name="partecipa_confirmation">Partecipa</string>
 
     <string name="no_channel_find">Nessun gruppo con questo nome, creane uno</string>
     <string name="create_channel">Crea Gruppo</string>
     <string name="create_channel_name">Nome gruppo</string>
     <string name="loading">Caricamento</string>
-
-
-
-
 
 
 
