event partecipa button implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="create_channel_name">Nome gruppo</string>
     <string name="loading">Caricamento</string>
 
+    <string name="yes">sì</string>
 
 
 </resources>
