pg utente e pagina principale

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="create_channel">Crea Gruppo</string>
     <string name="create_channel_name">Nome gruppo</string>
     <string name="loading">Caricamento</string>
+    <string name="facolta">facolta</string>
+    <string name="foto">foto</string>
 
 
 
