event frag layout improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="create_event">Crea Evento</string>
     <string name="created_event_text">ha creato un evento</string>
     <string name="view_partecipants">Vedi Partecipanti</string>
+    <string name="view_maps">Vedi Mappa</string>
     <string name="view_events">Vedi Eventi</string>
     <string name="partecipa_confirmation">Partecipa</string>
     <string name="partecipa_delete">Cancella Partecipazione</string>
