--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="loading">Caricamento</string>
 
     <string name="yes">sì</string>
+    <string name="no">no</string>
     <string name="add_favourite">Aggiungi gruppo ai preferiti</string>
 
 
