Main page see partecipation event finished add landscape for adapter event list and adapter channel list menu home to main page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="view_partecipants">Vedi Partecipanti</string>
     <string name="view_maps">Vedi Mappa</string>
     <string name="view_events">Vedi Eventi</string>
+    <string name="no_events">Nessun evento trovato</string>
     <string name="partecipa_confirmation">Partecipa</string>
     <string name="partecipa_delete">Cancella Partecipazione</string>
     <string name="no_partecipant_find">Nessun partecipante</string>
