--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -35,6 +35,8 @@
     <string name="channel_chat_content_desc_profile" >Immagine Profilo</string>
     <string name="upload_file_text" >ha caricato un file</string>
 
+    <string name="add_channel_title">Crea Gruppo</string>
+
     <string name="participant_list">Utenti in chat attualmente</string>
     <string name="participant_menu">Vedi utenti in chat</string>
     <string name="add_event" >Crea evento</string>
@@ -63,6 +65,7 @@
     <string name="copy_right">Copyrights © %1$d</string>
 
     <string name="no_channel_find" >Nessun gruppo con questo nome, creane uno</string>
+    <string name="no_pref_channel">Nessun gruppo tra i preferiti \nPuoi aggiungerne cercando tra i gruppi e cliccando sulla stella in alto all\'interno della chat</string>
     <string name="create_channel" >Crea Gruppo</string>
     <string name="create_channel_name" >Nome gruppo</string>
     <string name="loading" >Caricamento</string>
