add descrpition text event notification foreground nice icon add regex for firebase commented out localDB usage other fix?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="add_event_location">Luogo</string>
     <string name="add_event_date">Giorno</string>
     <string name="add_event_time">Ora</string>
+    <string name="add_event_description">Informazioni aggiuntive (facoltative)</string>
     <string name="create_event">Crea Evento</string>
     <string name="created_event_text">ha creato un evento</string>
     <string name="view_partecipants">Vedi Partecipanti</string>
